# scout-talker

./: .gitignore  CMakeLists.txt  README.md  scout-talker.txt
logo/: logo.odg
scout-talker/: fonts.qrc  icons.qrc  main.cpp  scout-talker.pro  scouttalker.cpp  scouttalker.h  window.cpp  window.h
src/: MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  SaveCode.cpp  SaveCode.h  ScoutTalker.cpp  ScoutTalker.h  ScoutTalkerConfig.h.in  main.cpp  scout-talker.pro  scouttalker.cpp  scouttalker.h  window.cpp  window.h
src/codes/: AngularCode.cpp  AngularCode.h  ChineseCode.cpp  ChineseCode.h  Code.cpp  Code.h  ReverseAlphabetCode.cpp  ReverseAlphabetCode.h
src/dialog/: AboutDialog.cpp  AboutDialog.h
src/dialogs/: AboutDialog.cpp  AboutDialog.h  HelpDialog.cpp  HelpDialog.h
src/resources/: fonts.qrc  icons.qrc
src/translations/: ScoutTalker_en_UK.ts  ScoutTalker_pt_PT.ts
